--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,6 @@
 .App {
+  background-image: url("https://img.freepik.com/premium-vector/seamless-pattern-kawaii-cute-broccoli-vector-illustration-design-scrapbooking-fabric-wallpap_107335-446.jpg?w=360");
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,17 +8,144 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  font-family: Arial Black;
 }
 
 .App-link {
-  color: #61dafb;
+  color: #000000;
+  position: relative;
+  bottom: 700px;
+  font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Main-Text {
+  font-family: Arial Black;
+  font-size: 80px;
+  -webkit-text-stroke: 2px black;
+  background: rgba(50, 150, 53, 0.8);
+  width: 100%;
+  height: 120px;
+  border-radius: 20px;
+  position: relative;
+  bottom: 65px;
+  border: 10px solid rgba(50, 150, 53, 0.7);
+}
+
+.Buying-Panel {
+  background: rgba(50, 150, 53, 0.8);
+  position: relative;
+  right: 650px;
+  padding: 30px;
+  height: 380px;
+  border-radius: 20px;
+}
+
+.Selling-Panel {
+  background: rgba(50, 150, 53, 0.8);
+  position: relative;
+  left: 650px;
+  bottom: 442px;
+  padding: 30px;
+  height: 380px;
+  border-radius: 20px;
+}
+
+.Add {
+  font-weight: bold;
+  font-size: 50px;
+  position: relative;
+  bottom: 50px;
+  -webkit-text-stroke: 1.5px black;
+}
+
+.Price {
+  position: relative;
+  bottom: 70px;
+  font-size: 40px;
+}
+
+.Price-Input {
+  position: relative;
+  bottom: 120px;
+  font-size: 15px;
+}
+
+.Amount {
+  position: relative;
+  bottom: 145px;
+  font-size: 40px;
+}
+
+.Number-Input {
+  position: relative;
+  bottom: 200px;
+  left: 35px;
+  font-size: 15px;
+}
+
+.Submit-Buy {
+  position: relative;
+  bottom: 110px;
+  right: 48px;
+  font-size: 30px;
+}
+
+.Issue {
+  font-weight: bold;
+  font-size: 50px;
+  position: relative;
+  bottom: 50px;
+  -webkit-text-stroke: 1.5px black;
+}
+
+.Sell-Amount {
+  position: relative;
+  bottom: 30px;
+  font-size: 40px;
+}
+
+.Selling-Value {
+  position: relative;
+  bottom: 80px;
+  left: 35px;
+  font-size: 15px;
+}
+
+.Submit-Sell {
+  position: relative;
+  top: 60px;
+  right: 43px;
+  font-size: 30px;
+}
+.Orders {
+  overflow: auto;
+  display: flex;
+  position: relative;
+  bottom: 882px;
+  left: 30px;
+  background-color: rgba(50, 150, 53, 0.8);
+  border-radius: 20px;
+  padding: 30px;
+  font-size: 20px;
+  flex-wrap: wrap;
+  gap: 13px;
+  width: 840px;
+  height: 380px;
+}
+
+.Orders2 {
+  background-color: rgba(50, 150, 53, 0.7);
+  padding-right: 7px;
+  padding-left: 7px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  border-radius: 10px;
+  border: 2px solid rgba(40, 121, 42, 0.7);
+}
+
+.delButton {
+  position: relative;
+  bottom: 3px;
+  left: 4px;
+  font-weight: bold;
 }
