--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@
   display: flex;
   justify-content: space-around;
   width: 100%;
-  margin-top: 8%;
+  margin-top: 6%;
 }
 
 .Buying-Panel {
@@ -88,6 +88,7 @@
   position: absolute;
   bottom: 0;
   font-weight: bold;
+  margin-bottom: 2%;
 }
 
 body {
