--- a/src/App.css
+++ b/src/App.css
@@ -18,8 +18,8 @@
   width: 100%;
   height: 120px;
   border-radius: 20px;
-  position: relative;
-  bottom: 0;
+  position: absolute;
+  top: 0;
   border: 10px solid rgba(50, 150, 53, 0.7);
 }
 
